# intro-vision

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  config.toml  pixi.toml
debug_dashboard/: app.js  index.html  styles.css
docs/: DRV2605L_ESP32_pins.csv  OV2640_ESP32_pins.csv  model_comparison.md
emotion_detect/: config.toml
emotion_detect/script/: export_espdl.py  export_onnx.py  test_esp32_hardware.py  test_espdl.py  test_onnx.py
emotion_detect/src/: config.py  main.py
emotion_detect/src/dataloader/: __init__.py  dataloader.py  dataset.py  preprocess.py
emotion_detect/src/inferencer/: inferencer.py
emotion_detect/src/logger/: logger.py
emotion_detect/src/model/: __init__.py  loss.py  model.py
emotion_detect/src/runners/: __init__.py  tester.py  trainer.py
emotion_detect/src/tester/: tester.py
emotion_detect/src/trainer/: trainer.py
emotion_detect/src/utils/: paths.py
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  emotion_model.cpp  emotion_model.hpp  idf_component.yml  main.cpp
firmware/main/haptics/: motor_driver.cpp  motor_driver.hpp
firmware/main/model/: config.h  emotion_model.cpp  emotion_model.hpp
firmware/main/preprocess/: image_preprocess.cpp  image_preprocess.hpp
firmware/main/test/: model_performace.cpp  test_image.h
firmware/main/utils/: emotion_type.hpp  performance_profiler.cpp  performance_profiler.hpp
model/: model.py
script/: export_espdl.py
src/: config.py  main.py
src/dataloader/: __init__.py  dataloader.py  preprocces.py
src/logger/: logger.py
src/model/: model.py
src/tester/: tester.py
src/trainer/: trainer.py
